// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select date"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        class="anticon"
        role="img"
      >
        <img
          alt=""
          src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjE0IiB2aWV3Qm94PSIwIDAgMTQgMTQiIHdpZHRoPSIxNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZyBmaWxsPSIjOGQ5MzljIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0xMyAyaC0xMnYxMWgxMnptLTEgMWgtMTB2OWgxMHoiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjxwYXRoIGQ9Im0xIDVoMTJ2MWgtMTJ6Ii8+PHBhdGggZD0ibTQgMWgxdjNoLTF6Ii8+PHBhdGggZD0ibTkgMWgxdjNoLTF6Ii8+PC9nPjwvc3ZnPg=="
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select month"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        class="anticon"
        role="img"
      >
        <img
          alt=""
          src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjE0IiB2aWV3Qm94PSIwIDAgMTQgMTQiIHdpZHRoPSIxNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZyBmaWxsPSIjOGQ5MzljIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0xMyAyaC0xMnYxMWgxMnptLTEgMWgtMTB2OWgxMHoiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjxwYXRoIGQ9Im0xIDVoMTJ2MWgtMTJ6Ii8+PHBhdGggZD0ibTQgMWgxdjNoLTF6Ii8+PHBhdGggZD0ibTkgMWgxdjNoLTF6Ii8+PC9nPjwvc3ZnPg=="
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 3`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="Select week"
      readonly=""
      size="12"
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        class="anticon"
        role="img"
      >
        <img
          alt=""
          src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjE0IiB2aWV3Qm94PSIwIDAgMTQgMTQiIHdpZHRoPSIxNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZyBmaWxsPSIjOGQ5MzljIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0xMyAyaC0xMnYxMWgxMnptLTEgMWgtMTB2OWgxMHoiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjxwYXRoIGQ9Im0xIDVoMTJ2MWgtMTJ6Ii8+PHBhdGggZD0ibTQgMWgxdjNoLTF6Ii8+PHBhdGggZD0ibTkgMWgxdjNoLTF6Ii8+PC9nPjwvc3ZnPg=="
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-picker ant-picker-range ant-picker-rtl"
>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      placeholder="Start date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      class="ant-picker-separator"
    >
      →
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      placeholder="End date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="right:0;width:0;position:absolute"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      class="anticon"
      role="img"
    >
      <img
        alt=""
        src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjE0IiB2aWV3Qm94PSIwIDAgMTQgMTQiIHdpZHRoPSIxNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZyBmaWxsPSIjOGQ5MzljIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0xMyAyaC0xMnYxMWgxMnptLTEgMWgtMTB2OWgxMHoiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjxwYXRoIGQ9Im0xIDVoMTJ2MWgtMTJ6Ii8+PHBhdGggZD0ibTQgMWgxdjNoLTF6Ii8+PHBhdGggZD0ibTkgMWgxdjNoLTF6Ii8+PC9nPjwvc3ZnPg=="
      />
    </span>
  </span>
</div>
`;
